--- a/date/2025-08/index.htm
+++ b/date/2025-08/index.htm
@@ -250,16 +250,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-14-free-node-subscribe.htm" title="「8月14日」最高速度20.3M/S，2025年Shadowrocket节点/V2ray节点/SSR/Clash每天更新免费节点订阅链接">「8月14日」最高速度20.3M/S，2025年Shadowrocket节点/V2ray节点/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-7-node-share.htm" title="「8月7日」最高速度18.3M/S，2025年Clash节点/V2ray节点/SSR/Shadowrocket每天更新免费节点订阅链接">「8月7日」最高速度18.3M/S，2025年Clash节点/V2ray节点/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-28-clash-v2ray-ss-ssr.htm" title="「8月28日」最高速度22M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/SSR每天更新免费节点订阅链接">「8月28日」最高速度22M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-22-node-share.htm" title="「9月22日」最高速度19.1M/S，2025年Shadowrocket节点/V2ray节点/SSR/Clash每天更新免费节点订阅链接">「9月22日」最高速度19.1M/S，2025年Shadowrocket节点/V2ray节点/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-3-free-shadowrocket-node.htm" title="「10月3日」最高速度22.6M/S，2025年Singbox节点/Shadowrocket节点/Clash节点/SSR节点/V2ray节点每天更新免费节点订阅链接">「10月3日」最高速度22.6M/S，2025年Singbox节点/Shadowrocket节点/Clash节点/SSR节点/V2ray节点每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-10-node-share-links.htm" title="「9月10日」最高速度22.5M/S，2025年Clash节点/SSR/Shadowrocket节点/V2ray每天更新免费节点订阅链接">「9月10日」最高速度22.5M/S，2025年Clash节点/SSR/Shadowrocket节点/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-22-free-v2ray-subscribe.htm" title="「8月22日」最高速度19M/S，2025年V2ray节点/Clash节点/Shadowrocket节点/SSR每天更新免费节点订阅链接">「8月22日」最高速度19M/S，2025年V2ray节点/Clash节点/Shadowrocket节点/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-18-clash-v2ray-ss-ssr.htm" title="「8月18日」最高速度19.6M/S，2025年Clash节点/V2ray节点/SSR/Shadowrocket每天更新免费节点订阅链接">「8月18日」最高速度19.6M/S，2025年Clash节点/V2ray节点/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-3-free-node-subscribe.htm" title="「9月3日」最高速度19.1M/S，2025年Clash节点/SSR/Shadowrocket节点/V2ray每天更新免费节点订阅链接">「9月3日」最高速度19.1M/S，2025年Clash节点/SSR/Shadowrocket节点/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-subscribe-node.htm" title="「8月21日」最高速度18.3M/S，2025年Shadowrocket节点/SSR/Clash节点/V2ray每天更新免费节点订阅链接">「8月21日」最高速度18.3M/S，2025年Shadowrocket节点/SSR/Clash节点/V2ray每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-15-clash-windows.htm" title="「9月15日」最高速度22.1M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR每天更新免费节点订阅链接">「9月15日」最高速度22.1M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-25-free-subscribe-node.htm" title="「8月25日」最高速度21.9M/S，2025年Shadowrocket节点/Clash节点/SSR/V2ray每天更新免费节点订阅链接">「8月25日」最高速度21.9M/S，2025年Shadowrocket节点/Clash节点/SSR/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-27-shadowrocket-node.htm" title="「9月27日」最高速度21.2M/S，2025年Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点每天更新免费节点订阅链接">「9月27日」最高速度21.2M/S，2025年Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-25-free-v2ray-subscribe.htm" title="「9月25日」最高速度23M/S，2025年Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点每天更新免费节点订阅链接">「9月25日」最高速度23M/S，2025年Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-17-free-shadowrocket-node.htm" title="「9月17日」最高速度19.1M/S，2025年SSR/V2ray节点/Clash节点/Shadowrocket每天更新免费节点订阅链接">「9月17日」最高速度19.1M/S，2025年SSR/V2ray节点/Clash节点/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-18-clash-v2ray-ss-ssr.htm" title="「9月18日」最高速度21.1M/S，2025年Shadowrocket节点/SSR/Clash节点/V2ray每天更新免费节点订阅链接">「9月18日」最高速度21.1M/S，2025年Shadowrocket节点/SSR/Clash节点/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-9-free-node-subscribe-links.htm" title="「8月9日」最高速度19.6M/S，2025年Shadowrocket节点/V2ray节点/SSR/Clash每天更新免费节点订阅链接">「8月9日」最高速度19.6M/S，2025年Shadowrocket节点/V2ray节点/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-node-subscribe.htm" title="「8月31日」最高速度19.5M/S，2025年SSR/Shadowrocket节点/V2ray节点/Clash每天更新免费节点订阅链接">「8月31日」最高速度19.5M/S，2025年SSR/Shadowrocket节点/V2ray节点/Clash每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -271,7 +271,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
