--- a/date/2025-08/page-2.htm
+++ b/date/2025-08/page-2.htm
@@ -250,16 +250,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-23-node-share-links.htm" title="「8月23日」最高速度19.7M/S，2025年V2ray节点/Shadowrocket节点/Clash节点/SSR每天更新免费节点订阅链接">「8月23日」最高速度19.7M/S，2025年V2ray节点/Shadowrocket节点/Clash节点/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-11-clash-v2ray-ss-ssr.htm" title="「9月11日」最高速度21M/S，2025年V2ray节点/Shadowrocket节点/Clash节点/SSR每天更新免费节点订阅链接">「9月11日」最高速度21M/S，2025年V2ray节点/Shadowrocket节点/Clash节点/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-26-shadowrocket-node.htm" title="「9月26日」最高速度22.1M/S，2025年Shadowrocket节点/Singbox节点/V2ray节点/Clash节点/SSR节点每天更新免费节点订阅链接">「9月26日」最高速度22.1M/S，2025年Shadowrocket节点/Singbox节点/V2ray节点/Clash节点/SSR节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-subscribe-node.htm" title="「8月21日」最高速度18.3M/S，2025年Shadowrocket节点/SSR/Clash节点/V2ray每天更新免费节点订阅链接">「8月21日」最高速度18.3M/S，2025年Shadowrocket节点/SSR/Clash节点/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-15-free-v2ray.htm" title="「8月15日」最高速度20.3M/S，2025年Shadowrocket节点/SSR/V2ray节点/Clash每天更新免费节点订阅链接">「8月15日」最高速度20.3M/S，2025年Shadowrocket节点/SSR/V2ray节点/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-26-free-high-speed-nodes.htm" title="「8月26日」最高速度21.9M/S，2025年V2ray节点/SSR/Clash节点/Shadowrocket每天更新免费节点订阅链接">「8月26日」最高速度21.9M/S，2025年V2ray节点/SSR/Clash节点/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-6-node-share.htm" title="「9月6日」最高速度19.7M/S，2025年Shadowrocket节点/SSR/V2ray节点/Clash每天更新免费节点订阅链接">「9月6日」最高速度19.7M/S，2025年Shadowrocket节点/SSR/V2ray节点/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-5-clash-v2ray-ss-ssr.htm" title="「8月5日」最高速度19.8M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/SSR每天更新免费节点订阅链接">「8月5日」最高速度19.8M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-12-free-clash-subscribe.htm" title="「9月12日」最高速度21.7M/S，2025年Shadowrocket节点/Clash节点/SSR/V2ray每天更新免费节点订阅链接">「9月12日」最高速度21.7M/S，2025年Shadowrocket节点/Clash节点/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-node-subscribe.htm" title="「8月31日」最高速度19.5M/S，2025年SSR/Shadowrocket节点/V2ray节点/Clash每天更新免费节点订阅链接">「8月31日」最高速度19.5M/S，2025年SSR/Shadowrocket节点/V2ray节点/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-22-node-share.htm" title="「9月22日」最高速度19.1M/S，2025年Shadowrocket节点/V2ray节点/SSR/Clash每天更新免费节点订阅链接">「9月22日」最高速度19.1M/S，2025年Shadowrocket节点/V2ray节点/SSR/Clash每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-28-clash-v2ray-ss-ssr.htm" title="「8月28日」最高速度22M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/SSR每天更新免费节点订阅链接">「8月28日」最高速度22M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-9-free-node-subscribe-links.htm" title="「8月9日」最高速度19.6M/S，2025年Shadowrocket节点/V2ray节点/SSR/Clash每天更新免费节点订阅链接">「8月9日」最高速度19.6M/S，2025年Shadowrocket节点/V2ray节点/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-8-clash-v2ray-ss-ssr.htm" title="「9月8日」最高速度19.5M/S，2025年Clash节点/Shadowrocket节点/V2ray节点/SSR每天更新免费节点订阅链接">「9月8日」最高速度19.5M/S，2025年Clash节点/Shadowrocket节点/V2ray节点/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-24-free-ssr-subscribe.htm" title="「9月24日」最高速度19M/S，2025年Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点每天更新免费节点订阅链接">「9月24日」最高速度19M/S，2025年Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-29-clash-v2ray-ss-ssr.htm" title="「8月29日」最高速度22.4M/S，2025年SSR/V2ray节点/Clash节点/Shadowrocket每天更新免费节点订阅链接">「8月29日」最高速度22.4M/S，2025年SSR/V2ray节点/Clash节点/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-27-shadowrocket-node.htm" title="「9月27日」最高速度21.2M/S，2025年Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点每天更新免费节点订阅链接">「9月27日」最高速度21.2M/S，2025年Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-20-free-node-subscribe-links.htm" title="「8月20日」最高速度20.4M/S，2025年SSR/Clash节点/V2ray节点/Shadowrocket每天更新免费节点订阅链接">「8月20日」最高速度20.4M/S，2025年SSR/Clash节点/V2ray节点/Shadowrocket每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -271,7 +271,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
