--- a/date/2025-09/index.htm
+++ b/date/2025-09/index.htm
@@ -110,6 +110,45 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2025-09-30">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-9-30-free-ssr-subscribe.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/cc523ed9277a0375a6331d5674ef34dc.webp" alt="「9月30日」最高速度18.3M/S，2025年V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-9-30-free-ssr-subscribe.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「9月30日」最高速度18.3M/S，2025年V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了日本、新加坡、韩国、美国、香港、加拿大、欧洲等地区,最高速度可达18.3 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-09-29">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-9-29-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/1fd790c0c842e87fd7fc3b1714ac6d9d.webp" alt="「9月29日」最高速度21.9M/S，2025年V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-9-29-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「9月29日」最高速度21.9M/S，2025年V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了韩国、日本、美国、新加坡、香港、加拿大、欧洲等地区,最高速度可达21.9 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-09-28">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-9-28-node-share-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/576e2849d154a2569f03a0e1904fcf9e.webp" alt="「9月28日」最高速度19.2M/S，2025年V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-9-28-node-share-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「9月28日」最高速度19.2M/S，2025年V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了日本、加拿大、新加坡、美国、香港、欧洲、韩国等地区,最高速度可达19.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2025-09-27">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2025-9-27-shadowrocket-node.htm" class="xcblog-blog-url">
@@ -201,45 +240,6 @@
                                     <p>这一次的节点更新覆盖了美国、香港、加拿大、日本、新加坡、韩国、欧洲等地区,最高速度可达22.8 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-09-20">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-9-20-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/8be83b8774f88a8347879125816b5e62.webp" alt="「9月20日」最高速度18.9M/S，2025年SSR/V2ray节点/Shadowrocket节点/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-9-20-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「9月20日」最高速度18.9M/S，2025年SSR/V2ray节点/Shadowrocket节点/Clash每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了香港、欧洲、日本、美国、新加坡、韩国、加拿大等地区,最高速度可达18.9 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-09-19">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-9-19-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/ef0258d05bc7d0211f47300749f0816c.webp" alt="「9月19日」最高速度18.6M/S，2025年V2ray节点/Shadowrocket节点/SSR/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-9-19-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「9月19日」最高速度18.6M/S，2025年V2ray节点/Shadowrocket节点/SSR/Clash每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了日本、香港、新加坡、欧洲、韩国、加拿大、美国等地区,最高速度可达18.6 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-09-18">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-9-18-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/823330949e90bc030d363139bfc4db3d.webp" alt="「9月18日」最高速度21.1M/S，2025年Shadowrocket节点/SSR/Clash节点/V2ray每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-9-18-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「9月18日」最高速度21.1M/S，2025年Shadowrocket节点/SSR/Clash节点/V2ray每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了新加坡、香港、欧洲、美国、加拿大、韩国、日本等地区,最高速度可达21.1 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
                             
                             <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2025-09/page-2.htm">2</a></li><li><a href="/date/2025-09/page-3.htm">3</a></li> <li><a href="/date/2025-09/page-2.htm">&raquo;</a></li></ul>                        </div>
                     </div>
@@ -250,16 +250,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-17-clash-v2ray-ss-ssr.htm" title="「8月17日」最高速度21M/S，2025年SSR/Clash节点/V2ray节点/Shadowrocket每天更新免费节点订阅链接">「8月17日」最高速度21M/S，2025年SSR/Clash节点/V2ray节点/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-4-node-share.htm" title="「9月4日」最高速度19.7M/S，2025年SSR/Clash节点/V2ray节点/Shadowrocket每天更新免费节点订阅链接">「9月4日」最高速度19.7M/S，2025年SSR/Clash节点/V2ray节点/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-26-shadowrocket-node.htm" title="「9月26日」最高速度22.1M/S，2025年Shadowrocket节点/Singbox节点/V2ray节点/Clash节点/SSR节点每天更新免费节点订阅链接">「9月26日」最高速度22.1M/S，2025年Shadowrocket节点/Singbox节点/V2ray节点/Clash节点/SSR节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-6-node-share.htm" title="「8月6日」最高速度18.8M/S，2025年SSR/V2ray节点/Clash节点/Shadowrocket每天更新免费节点订阅链接">「8月6日」最高速度18.8M/S，2025年SSR/V2ray节点/Clash节点/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-12-free-clash-subscribe.htm" title="「9月12日」最高速度21.7M/S，2025年Shadowrocket节点/Clash节点/SSR/V2ray每天更新免费节点订阅链接">「9月12日」最高速度21.7M/S，2025年Shadowrocket节点/Clash节点/SSR/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-6-node-share.htm" title="「9月6日」最高速度19.7M/S，2025年Shadowrocket节点/SSR/V2ray节点/Clash每天更新免费节点订阅链接">「9月6日」最高速度19.7M/S，2025年Shadowrocket节点/SSR/V2ray节点/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-3-free-node-subscribe.htm" title="「9月3日」最高速度19.1M/S，2025年Clash节点/SSR/Shadowrocket节点/V2ray每天更新免费节点订阅链接">「9月3日」最高速度19.1M/S，2025年Clash节点/SSR/Shadowrocket节点/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-12-free-node-subscribe.htm" title="「8月12日」最高速度20.1M/S，2025年Clash节点/Shadowrocket节点/SSR/V2ray每天更新免费节点订阅链接">「8月12日」最高速度20.1M/S，2025年Clash节点/Shadowrocket节点/SSR/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-19-clash-v2ray-ss-ssr.htm" title="「9月19日」最高速度18.6M/S，2025年V2ray节点/Shadowrocket节点/SSR/Clash每天更新免费节点订阅链接">「9月19日」最高速度18.6M/S，2025年V2ray节点/Shadowrocket节点/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-22-free-v2ray-subscribe.htm" title="「8月22日」最高速度19M/S，2025年V2ray节点/Clash节点/Shadowrocket节点/SSR每天更新免费节点订阅链接">「8月22日」最高速度19M/S，2025年V2ray节点/Clash节点/Shadowrocket节点/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-2-free-ssr-subscribe.htm" title="「10月2日」最高速度19.8M/S，2025年Singbox节点/SSR节点/V2ray节点/Clash节点/Shadowrocket节点每天更新免费节点订阅链接">「10月2日」最高速度19.8M/S，2025年Singbox节点/SSR节点/V2ray节点/Clash节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-15-free-v2ray.htm" title="「8月15日」最高速度20.3M/S，2025年Shadowrocket节点/SSR/V2ray节点/Clash每天更新免费节点订阅链接">「8月15日」最高速度20.3M/S，2025年Shadowrocket节点/SSR/V2ray节点/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-28-clash-v2ray-ss-ssr.htm" title="「8月28日」最高速度22M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/SSR每天更新免费节点订阅链接">「8月28日」最高速度22M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-25-free-v2ray-subscribe.htm" title="「9月25日」最高速度23M/S，2025年Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点每天更新免费节点订阅链接">「9月25日」最高速度23M/S，2025年Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-14-free-subscribe-node.htm" title="「9月14日」最高速度20.5M/S，2025年Clash节点/Shadowrocket节点/SSR/V2ray每天更新免费节点订阅链接">「9月14日」最高速度20.5M/S，2025年Clash节点/Shadowrocket节点/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-22-node-share.htm" title="「9月22日」最高速度19.1M/S，2025年Shadowrocket节点/V2ray节点/SSR/Clash每天更新免费节点订阅链接">「9月22日」最高速度19.1M/S，2025年Shadowrocket节点/V2ray节点/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-11-clash-v2ray-ss-ssr.htm" title="「9月11日」最高速度21M/S，2025年V2ray节点/Shadowrocket节点/Clash节点/SSR每天更新免费节点订阅链接">「9月11日」最高速度21M/S，2025年V2ray节点/Shadowrocket节点/Clash节点/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-14-free-node-subscribe.htm" title="「8月14日」最高速度20.3M/S，2025年Shadowrocket节点/V2ray节点/SSR/Clash每天更新免费节点订阅链接">「8月14日」最高速度20.3M/S，2025年Shadowrocket节点/V2ray节点/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-1-node-share-links.htm" title="「9月1日」最高速度22.4M/S，2025年V2ray节点/Shadowrocket节点/SSR/Clash每天更新免费节点订阅链接">「9月1日」最高速度22.4M/S，2025年V2ray节点/Shadowrocket节点/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-29-free-high-speed-nodes.htm" title="「9月29日」最高速度21.9M/S，2025年V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点每天更新免费节点订阅链接">「9月29日」最高速度21.9M/S，2025年V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -271,7 +271,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
