--- a/free-nodes/2025-9-24-free-ssr-subscribe.htm
+++ b/free-nodes/2025-9-24-free-ssr-subscribe.htm
@@ -169,16 +169,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-2-free-node-subscribe-links.htm" title="「9月2日」最高速度18M/S，2025年SSR/V2ray节点/Clash节点/Shadowrocket每天更新免费节点订阅链接">「9月2日」最高速度18M/S，2025年SSR/V2ray节点/Clash节点/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-18-clash-v2ray-ss-ssr.htm" title="「9月18日」最高速度21.1M/S，2025年Shadowrocket节点/SSR/Clash节点/V2ray每天更新免费节点订阅链接">「9月18日」最高速度21.1M/S，2025年Shadowrocket节点/SSR/Clash节点/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-30-free-ssr-subscribe.htm" title="「9月30日」最高速度18.3M/S，2025年V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点每天更新免费节点订阅链接">「9月30日」最高速度18.3M/S，2025年V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-clash-node-daily-updates.htm" title="「9月16日」最高速度22.3M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/SSR每天更新免费节点订阅链接">「9月16日」最高速度22.3M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-29-clash-v2ray-ss-ssr.htm" title="「8月29日」最高速度22.4M/S，2025年SSR/V2ray节点/Clash节点/Shadowrocket每天更新免费节点订阅链接">「8月29日」最高速度22.4M/S，2025年SSR/V2ray节点/Clash节点/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-4-node-share.htm" title="「9月4日」最高速度19.7M/S，2025年SSR/Clash节点/V2ray节点/Shadowrocket每天更新免费节点订阅链接">「9月4日」最高速度19.7M/S，2025年SSR/Clash节点/V2ray节点/Shadowrocket每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-11-node-share.htm" title="「8月11日」最高速度22.7M/S，2025年Clash节点/Shadowrocket节点/V2ray节点/SSR每天更新免费节点订阅链接">「8月11日」最高速度22.7M/S，2025年Clash节点/Shadowrocket节点/V2ray节点/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-28-clash-v2ray-ss-ssr.htm" title="「8月28日」最高速度22M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/SSR每天更新免费节点订阅链接">「8月28日」最高速度22M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-3-free-node-subscribe.htm" title="「9月3日」最高速度19.1M/S，2025年Clash节点/SSR/Shadowrocket节点/V2ray每天更新免费节点订阅链接">「9月3日」最高速度19.1M/S，2025年Clash节点/SSR/Shadowrocket节点/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-30-clash-v2ray-ss-ssr.htm" title="「8月30日」最高速度19.1M/S，2025年Shadowrocket节点/SSR/Clash节点/V2ray每天更新免费节点订阅链接">「8月30日」最高速度19.1M/S，2025年Shadowrocket节点/SSR/Clash节点/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-16-node-share.htm" title="「8月16日」最高速度19M/S，2025年Clash节点/V2ray节点/SSR/Shadowrocket每天更新免费节点订阅链接">「8月16日」最高速度19M/S，2025年Clash节点/V2ray节点/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-8-clash-v2ray-ss-ssr.htm" title="「9月8日」最高速度19.5M/S，2025年Clash节点/Shadowrocket节点/V2ray节点/SSR每天更新免费节点订阅链接">「9月8日」最高速度19.5M/S，2025年Clash节点/Shadowrocket节点/V2ray节点/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-10-node-share-links.htm" title="「8月10日」最高速度22.9M/S，2025年V2ray节点/SSR/Clash节点/Shadowrocket每天更新免费节点订阅链接">「8月10日」最高速度22.9M/S，2025年V2ray节点/SSR/Clash节点/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-8-clash-v2ray-ss-ssr.htm" title="「8月8日」最高速度21.8M/S，2025年V2ray节点/Clash节点/SSR/Shadowrocket每天更新免费节点订阅链接">「8月8日」最高速度21.8M/S，2025年V2ray节点/Clash节点/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-12-free-clash-subscribe.htm" title="「9月12日」最高速度21.7M/S，2025年Shadowrocket节点/Clash节点/SSR/V2ray每天更新免费节点订阅链接">「9月12日」最高速度21.7M/S，2025年Shadowrocket节点/Clash节点/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-15-clash-windows.htm" title="「9月15日」最高速度22.1M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR每天更新免费节点订阅链接">「9月15日」最高速度22.1M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-27-shadowrocket-node.htm" title="「9月27日」最高速度21.2M/S，2025年Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点每天更新免费节点订阅链接">「9月27日」最高速度21.2M/S，2025年Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-1-free-ssr-subscribe.htm" title="「10月1日」最高速度18.2M/S，2025年V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点每天更新免费节点订阅链接">「10月1日」最高速度18.2M/S，2025年V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-free-node-subscribe.htm" title="「9月13日」最高速度20.7M/S，2025年SSR/V2ray节点/Clash节点/Shadowrocket每天更新免费节点订阅链接">「9月13日」最高速度20.7M/S，2025年SSR/V2ray节点/Clash节点/Shadowrocket每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -190,7 +190,10 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
